Correcions a els noms de imatges.

--- a/Avocados_readme/10.Avocados_del_diablo.md
+++ b/Avocados_readme/10.Avocados_del_diablo.md
@@ -212,7 +212,8 @@ Autores: Xavi,Cesc,Victor
 > [!NOTE] Observamos que no hay variables correlacionadas por lo que el volumen de ventas de un calibre específico no influye en la determinación del precio medio.
     
 ![png](output_28_0.png)
-> [!NOTE] Por otro lado el Volumen Total si que esta muy relacionado con las ventas de los calibres pequeños (S) y grandes (L).
+> [!NOTE]
+> Por otro lado el Volumen Total si que esta muy relacionado con las ventas de los calibres pequeños (S) y grandes (L).
 
 ```
 Variables altamente correlacionadas con otras: ['Total Volume', 'Volume_Hass_S', 'Volume_Hass_L']
@@ -221,7 +222,8 @@ Variables altamente correlacionadas con otras: ['Total Volume', 'Volume_Hass_S',
 ### Proporción de calibres sobre Total Volume
     
 ![png](output_30_0.png)
-> [!NOTE] Observamos que las ventas de los distintos calibres son muy distintas en cada region. No se aprecia ningun patron de ventas.
+> [!NOTE] 
+> Observamos que las ventas de los distintos calibres son muy distintas en cada region. No se aprecia ningun patron de ventas.
 ### Proporción por tipo de bolsa sobre Total Bags
     
 ![png](output_32_0.png)
@@ -239,54 +241,45 @@ Variables altamente correlacionadas con otras: ['Small Bags', 'Large Bags']
 > [!NOTE] 
 > Caso de la mayor ciudad, donde observamos el mismo comportamiento.
 
-```
-Variables altamente correlacionadas con otras: ['Small Bags', 'XLarge Bags']
-```
-
 ### Precio medio y volumen total
 Observaciones:
 * Estamos mostrado los de tipo convencional. Que son los grupos de puntos de la parte derecha ? TotalUS y Grandes Regions.
     
 ![png](output_36_0.png)
-> [!NOTE] 
-
+> [!NOTE] Considerando Total Volume como el indicativo del Maket Size, apreciamos que para cada categoria de region, el tamaño del mercado influye sobre el precio: a mayor tamaño menor precio.
+>
 ![png](output_36_1.png)
-> [!NOTE]    
-
+> [!NOTE] 
+>
 ### Separar avocados convencionales y organicos
-Observaciones:
-* TODO: Aqui es veu clarament que el alvocat més relevant es el convencional per ordres de magnitud, per ho que seria relevant fer algún estudi del subset eliminant els organics o estudian-los per separat.
-* Addicionalment, l'any 2018 no esta complert, pot afectar a les dades.
+> [!NOTE] 
+> 
     
 ![png](output_38_0.png)
-    
+ > [!NOTE]
+ > Podemos ver que años analizados la venta del organico es muy inferior a la del convecional. Seria relevante estudiar el subset eliminando los organicos o estudiarlos por separado.
+
     
 ![png](output_39_0.png)
-    
-    
-![png](output_39_2.png)
-    
-    
+> [!NOTE] 
+> Precio medio en el total de tiempo analizado con precios semanales.
+        
 ![png](output_39_3.png)
-    
 
 ### Comparación precios promedio convencional y organico
-Observaciones:
-* TODO: Aqui veiem que existeixen unes regions mes relevants que altres. Caldria fer una separació?
-* TODO: Excloure TotalUS ??
-
     
 ![png](output_41_0.png)
-
+> [!NOTE] 
+> El grafico, que no incluye TotalUS, nos permite identificar las grandes regiones de forma detallada.
     
 ![png](output_42_0.png)
-    
-
-Observaciones:
-* TODO: Aquest gràfic es espectacular, y ens permet veure que sempre són els alvocats orgànics els que costen més que la mitjana.
-
-    
+> [!NOTE] 
+> Aqui observamos que en todas las regiones el tipo organico siempre es mas caro.
+   
+  
 ![png](output_45_0.png)
+> Observaciones:
+* TODO: Aquest gràfic es espectacular, y ens permet veure que sempre són els alvocats orgànics els que costen més que la mitjana.
     
 
 ### TODO: Convencional vs Organic
@@ -559,36 +552,12 @@ Observaciones:
 * Addicionalment tractarem de fer els càlculs d'elasticitat un cop fetes les separacions en el df
 
 #### 2.1. Elasticidad Sobre el tiempo (Conventional USA)
-
-
-
-
-
-
-
-
     
 ![png](output_104_0.png)
     
-
-
-
-
-
-
-    
 ![png](output_105_0.png)
     
-
-
-
-
-
-
-    
 ![png](output_106_0.png)
-    
-
 
 #### 2.2. Elasticidad por Regiones, harémos por regiones mas grandes y en funcion del tiempo. Solo convencionales.
 
@@ -598,7 +567,7 @@ Observaciones:
 
 
     
-![png](output_108_0.png)
+![png](output_107_0.png)
     
 
 
@@ -608,7 +577,7 @@ Observaciones:
 
 
     
-![png](output_109_0.png)
+![png](output_108_0.png)
     
 
 
@@ -624,16 +593,16 @@ Observaciones:
 
 
     
+![png](output_111_0.png)
+    
+
+
+
+
+
+
+    
 ![png](output_112_0.png)
-    
-
-
-
-
-
-
-    
-![png](output_113_0.png)
     
 
 
@@ -643,7 +612,7 @@ Observaciones:
 
 
     
-![png](output_114_0.png)
+![png](output_113_0.png)
     
 
 
@@ -663,11 +632,17 @@ Observaciones:
 
 
     
-![png](output_121_0.png)
+![png](output_120_0.png)
     
 
 
 ##### Elasticidad por region con barras
+
+
+![png](output_122_0.png)
+    
+![png](output_122_1.png)
+    
 
 
 
@@ -677,17 +652,11 @@ Observaciones:
 
 
 
-    
-![png](output_123_1.png)
-    
-
-
-
 
 
 
     
-![png](output_124_0.png)
+
     
 
 
@@ -699,7 +668,7 @@ Observaciones:
 
 
     
-![png](output_125_0.png)
+![png](output_124_0.png)
     
 
 
@@ -922,7 +891,7 @@ Observaciones:
     std               480.220418  
 ```
     
-![png](output_128_2.png)
+![png](output_127_2.png)
     
 
 
@@ -1145,7 +1114,7 @@ Observaciones:
 
 
     
-![png](output_129_2.png)
+![png](output_128_0.png)
     
 
 
@@ -1158,13 +1127,13 @@ Observaciones:
 
 
     
+![png](output_131_0.png)
+    
+
+
+
+    
 ![png](output_132_0.png)
-    
-
-
-
-    
-![png](output_133_0.png)
     
 
 
@@ -1185,33 +1154,25 @@ Observaciones:
 
 
 ##### 2. Cohortes por Región y Fecha:
-
-
-
     
-![png](output_141_0.png)
-    
-
-
-
-    
-![png](output_141_1.png)
-    
+![png](output_140_0.png)   
+   
+![png](output_140_1.png)
 
 
 ##### 3. Análisis de Cohortes en Función del Tipo de Bolsa:
 
     
+![png](output_142_0.png)
+    
+
+    
 ![png](output_143_0.png)
     
 
+
     
 ![png](output_144_0.png)
-    
-
-
-    
-![png](output_145_0.png)
     
 
 
@@ -1219,13 +1180,13 @@ Observaciones:
 
 
     
+![png](output_146_0.png)
+    
+
+
+
+    
 ![png](output_147_0.png)
-    
-
-
-
-    
-![png](output_148_0.png)
     
 
 
@@ -1234,7 +1195,7 @@ Observaciones:
 
 
     
-![png](output_150_0.png)
+![png](output_149_0.png)
     
 
 
@@ -1243,7 +1204,7 @@ Observaciones:
 
 
     
-![png](output_152_0.png)
+![png](output_151_0.png)
     
 
 ```
@@ -1419,7 +1380,7 @@ Observaciones:
 * TODO ?
 
     
-![png](output_157_0.png)
+![png](output_156_0.png)
     
 
 
@@ -1432,7 +1393,7 @@ Observaciones:
 
 
     
-![png](output_158_0.png)
+![png](output_157_0.png)
     
 
 
@@ -2109,29 +2070,20 @@ Observaciones:
 
 
     
-![png](output_178_1.png)
+![png](output_174_1.png)
     
 
 
 ### Prediccion Total Volume
 
 
-
-
-
-
 ### Visualizacion predicciones total Volume
 
     
-![png](output_183_1.png)
+![png](output_179_1.png)
     
 
-
 ## Creación Modelo Variable dependiente
-
-
-
-
 
 ```
     Valor R² del modelo: 0.969116   
@@ -2140,25 +2092,11 @@ Observaciones:
 
 ## Predicción Variable Dependiente
 
-
-
 ```
     3044324.417662722 3012443.205535852
 ```
 
-
-
 ## Visualización final predicciones
-
-
-
-
-
-
-
-
-
     
-![png](output_194_1.png)
+![png](output_190_1.png)
     
-
