Mes notes als apartats.

--- a/Avocados_readme/10.Avocados_del_diablo.md
+++ b/Avocados_readme/10.Avocados_del_diablo.md
@@ -366,8 +366,6 @@ Observaciones:
 > [!NOTE] 
 > En organicos, observamos mas outlayers en California que en el resto.
 
-
-
     
 ![png](output_83_1.png)
 
@@ -387,55 +385,53 @@ Observaciones:
 > Para cada uno de los tipos de aguacates, la bolsa pequeña siempre es la mas vendida.
 
 
-### Total Volume respecto al conjunto de volumenes por calibres de HASS S, L y XL
-
-* Para seleccionar unicamente las regiones propias , descartamos Total US para la vista gráfica
+### Total Volume respecto a la suma de los calibres de HASS: S, L y XL
     
 ![png](output_91_0.png)
-    
-![png](output_91_1.png)
 
+![png](output_91_1.png)
+> [!NOTE] 
+> Para todos los casos de GreaterRegions y grandes ciudades, se aprecia que la suma de los calibres es siempre inferior al valor de Total Volume. Esto indicaria que se faltan informacion de otros calibres.
 
 ### Impacto del precio en las ventas
-
-* TODO: Aqui podem veure que a majors mercats el preu mig tendeix a abaratirse. 
-* Aqui estem prenent cada regio com equivalentment valida  cambiar el 2018 no parece afectar los resultados
-    
+   
 ![png](output_93_0.png)
+> [!NOTE] 
+> Las diferencias del precio entre aguacate organico y convecional tiende a disminuir para mercados mas grandes.
 
 ### Estacionalidad por región
-* Se observa que en general el precio es más alto en verano y otoño.
     
 ![png](output_95_0.png)
-  
+> [!NOTE] 
+> Se observa que en general el precio es más alto en verano y otoño.
+
+
 ### Fechas con explosión de ventas
-* TODO: Super Bowl
-  * 2015: 2 de febrero
-  * 2016: 7 de febrero
-  * 2017: 6 de febrero
-  * 2018: 5 de febrero
-
-
-
-
-
     
 ![png](output_97_0.png)
-    
-
-
-##### TODO
-
-
-
-
-
-    
+> [!NOTE] 
+> Super Bowl
+> * 2015: 2 de febrero
+> * 2016: 7 de febrero
+> * 2017: 6 de febrero
+> * 2018: 5 de febrero
+        
 ![png](output_99_0.png)
     
 
-
 ### Elasticidad
+
+#### Prueba USA
+
+* Calculo por cada region
+* Creacion de la variable elasticidad y eliminacion de valores no utiles
+    
+![png](output_111_0.png)
+    
+![png](output_112_0.png)
+    
+![png](output_113_0.png)
+
 
 #### Further studies
 
@@ -444,68 +440,19 @@ Observaciones:
 
 #### 2.1. Elasticidad Sobre el tiempo (Conventional USA)
     
-![png](output_104_0.png)
-    
+![png](output_132_0.png)
+> [!NOTE] 
+> Observamos que la elasticidad tiende a ser negativa con los aguacates organicos mostrando mayor tendencia hacia valores negativos.
+
 ![png](output_105_0.png)
-    
-![png](output_106_0.png)
+> [!NOTE] 
+> La media de la elasticidad para cada tipo en Total US.
 
 #### 2.2. Elasticidad por Regiones, harémos por regiones mas grandes y en funcion del tiempo. Solo convencionales.
 
-
 * Creacion de la variable elasticidad y eliminacion de valores no utiles
-
-
-
-    
-![png](output_107_0.png)
-    
-
-
-
-* Creacion de la variable elasticidad y eliminacion de valores no utiles
-
-
-
-    
-![png](output_108_0.png)
-    
-
-
-#### Otros
-##### Prueba USA
-
-* Veig coses molt rares per a total US. Probem 
-
-
-*  Calculo por cada region
-* Creacion de la variable elasticidad y eliminacion de valores no utiles
-
-
-
-    
-![png](output_111_0.png)
-    
-
-
-
-
-
-
-    
-![png](output_112_0.png)
-    
-
-
-
-* Calculo por cada region
-* Creacion de la variable elasticidad y eliminacion de valores no utiles
-
-
-    
-![png](output_113_0.png)
-    
-
+       
+### Otros
 
 #### Regiones correctas
 
@@ -1002,47 +949,21 @@ Observaciones:
     max              3166.070984  
     std               480.220418  
 ```
-
-
-    
 ![png](output_128_0.png)
     
-
-
 #### Repetir estudio, pero solo USA
 
-
-
-
 * Creem el group by adient
-
-
     
 ![png](output_131_0.png)
-    
-
-
-
-    
-![png](output_132_0.png)
-    
-
-
-
-
+        
 ### Analisis por cohortes
 
 ##### 1. Cohortes Basadas en Precios Promedios Trimestrales:
 
-
-
-
-    
 ![png](output_139_0.png)
 > [!NOTE] Se observa como baja el volumen de ventas a medida que sube el Average Price de forma "sincronizada". 
 > Los picos rojos muestran la coincidencia con las fechas de la Super Bowl.
-
-
 
 ##### 2. Cohortes por Región y Fecha:
     
@@ -1052,51 +973,27 @@ Observaciones:
 
 
 ##### 3. Análisis de Cohortes en Función del Tipo de Bolsa:
-
-    
+   
 ![png](output_142_0.png)
     
-
-    
 ![png](output_143_0.png)
-    
-
-
     
 ![png](output_144_0.png)
     
 
-
 ##### 4. Cohortes de Clientes Basadas en Ventas:
-
-
-    
+  
 ![png](output_146_0.png)
-    
-
-
-
     
 ![png](output_147_0.png)
     
-
-
 ##### 5. Evaluación de Retención de Ventas por Cohorte:
-
-
-
     
 ![png](output_149_0.png)
     
-
-
 #### Matriz de correlaciones de todas las variables según  apartado 5.6. En especial, precio medio y relación con diferentes calibres.
-
-
-
     
 ![png](output_151_0.png)
-    
 
 ```
     Variables altamente correlacionadas con otras: ['Total Volume', 'Total Bags', 'Volume_Hass_L']
